--- a/src/java/org/jivesoftware/resource/default.properties
+++ b/src/java/org/jivesoftware/resource/default.properties
@@ -14,68 +14,75 @@ SECONDARY_BACKGROUND_IMAGE = images/steel.png
 # Changing the Hostname will also be prohibited if set
 HOST_NAME = 
 # Proxy Settings
-PROXY_HOST =
-PROXY_PORT =
+# Protocols are HTTP or SOCKS , case sensitive!!!
+PROXY_PROTOCOL = 
+PROXY_HOST = 
+PROXY_PORT = 
 
 # Remove account creation Button from Loginwindow
+# Users wont be able to register new Accounts from within Spark
 ACCOUNT_DISABLED = 
 # Remove Advanced Configuration Button from Loginwindow
+# Users wont be able to access the advanced configuration 
 ADVANCED_DISABLED = 
-
 
 
 # Branding only
 # Branded images appear in the Top-Right corner, and must be included in the classpath
 # place them in src/resource/images and path will be "images/file.jpg"
+# BRANDED_IMAGE = images/my-corporation-logo.png
 BRANDED_IMAGE = 
+
+# Shows a powered by logo below the Main Image of Spark
 SHOW_POWERED_BY = 
 # Disables updateability, you should set this, if you have a custom Spark-build
+# or are in an environment where installfiles are distributed via network
 DISABLE_UPDATES = 
 
-#If true, Spark cannot shut down
+# If true, Spark cannot shut down
+# users wont be able to shut down Spark
 DISABLE_EXIT = 
 
 
 #################################################
 ################## Main Window ##################
 #################################################
-
+# [Not yet implemented:]
+# Changing this wont have any effect
 # Roster Management
-HOVER_TEXT_COLOR =
-TEXT_COLOR =
-
-CONTACT_GROUP_START_COLOR =
-CONTACT_GROUP_END_COLOR =
-
-TAB_START_COLOR =
-TAB_END_COLOR =
-
-
+#HOVER_TEXT_COLOR =
+#TEXT_COLOR =
+#CONTACT_GROUP_START_COLOR =
+#CONTACT_GROUP_END_COLOR =
+#TAB_START_COLOR =
+#TAB_END_COLOR =
+# [/NYI]
 #################################################
 ################ Settings Window ################
 #################################################
 
 # Disables adding of contacts
+# The User wont be able to add contacts, 
+# usefull for shared roster management
 ADD_CONTACT_DISABLED = 
 # Disables adding contact groups
+# The User wont be able to add contact groups, 
+# usefull for shared roster management
 ADD_CONTACT_GROUP_DISABLED = 
 
 # Change Password Disabled
+# Users wont be able to change their password
 CHANGE_PASSWORD_DISABLED = 
-
-# Disable Look&Feel change || "true" = disabled ,  anything else = enabled
-LOOK_AND_FEEL_DISABLED = 
-# you can use org.jvnet.substance.skin.SubstanceBusinessBlueSteelLookAndFeel for example
-# If Setting this you should also consider disabling the above
-DEFAULT_LOOK_AND_FEEL = 
 
 # Sets the Location of the Userguide
 #Default is http://www.igniterealtime.org/builds/spark/docs/spark_user_guide.pdf
 HELP_USER_GUIDE = http://www.igniterealtime.org/builds/spark/docs/spark_user_guide.pdf
+# Set to true, if you dont want this displayed
 HELP_USER_GUIDE_DISABLED = 
 # Sets the Location of the Help-Forum
 #Default is http://www.igniterealtime.org/forum/forum.jspa?forumID=49
 HELP_FORUM = http://www.igniterealtime.org/forum/forum.jspa?forumID=49
+# Set to true, if you dont want this displayed
 HELP_FORUM_DISABLED = 
 # Following Text will be displayed instead of "Spark forum"
 # leave blank for default
@@ -93,3 +100,64 @@ INSTALL_PLUGINS_DISABLED =
 # Disable deleting of Plugins
 # set true if you want to disable deinstalling of Plugins
 DEINSTALL_PLUGINS_DISABLED = 
+
+
+#################################################
+#########     Color + LookandFeel     ###########
+#################################################
+
+
+# Disable Look&Feel change || "true" = disabled ,  anything else = enabled
+# By Default the user can Change his Look&Feel in the Preferences Menu, 
+#if you dont want this then set it to true
+# Preferences -> Appearence -> Customization Tab
+LOOK_AND_FEEL_DISABLED = 
+# Disable if you dont want Users to be able to Change the Textcolors in the Preference Menu
+# the colors will be loaded from below
+# Preferences -> Appearence -> ColorTab 
+CHANGE_COLORS_DISABLED = 
+# Changes the Default Look&Feel, if empty it will load the SystemSkin
+# Default Spark skin is SubstanceBusinessBlueSteelLookAndFeel
+DEFAULT_LOOK_AND_FEEL = org.jvnet.substance.skin.SubstanceBusinessBlueSteelLookAndFeel
+
+# Below are Single Color Elements
+# They are Stored as Redvalue,Greenvalue,Bluevalue,Alphavalue
+# Ranging from 0 - 255
+# an Alpha value of 255 means it is completly opaque
+# an Alpha value of 0 means it is transparent 
+# all values must be set or it will produce errors
+# they are preconfigured to look nice with the Windowstheme or the SubstanceBusinessBlueSteel Look
+ChatInput.SelectedTextColor = 255,255,255,255
+ChatInput.SelectionColor = 0,0,255,255  
+ContactItemNickname.foreground = 0,0,0,255
+ContactItemDescription.foreground = 128,128,128,255
+ContactItem.background = 240,243,253,255
+ContactItemOffline.color = 128,128,128,255
+Link.foreground = 0,0,255,255
+List.selectionBackground = 217,232,250,255
+List.selectionForeground = 0,0,0,255
+List.selectionBorder = 187,195,215,255
+List.foreground = 0,0,0,255
+List.background = 255,255,255,255  
+TextField.lightforeground = 128,128,128,255
+TextField.foreground = 0,0,0,255
+TextField.caretForeground = 0,0,0,255
+TextPane.foreground = 0,0,0,255
+TextPane.background = 255,255,255,0
+TextPane.inactiveForeground = 255,255,255,255
+TextPane.caretForeground = 0,0,0,255  
+MenuItem.selectionBackground = 217,232,250,255
+MenuItem.selectionForeground = 0,0,0,255
+Table.foreground = 0,0,0,255
+Table.background = 255,255,255,255
+## ChatWindow Colors: ##
+Address.foreground = 212,160,0,255
+User.foreground = 0,0,255,255
+OtherUser.foreground = 255,0,0,255
+Notification.foreground = 0,128,0,255
+Error.foreground = 255,0,0,255
+Question.foreground = 255,0,0,255
+History.foreground = 64,64,64,255
+SparkTabbedPane.startColor = 236,236,236,255
+SparkTabbedPane.endColor = 236,236,236,255
+SparkTabbedPane.borderColor = 192,192,192,255
