--- a/src/java/org/jivesoftware/resource/spark.properties
+++ b/src/java/org/jivesoftware/resource/spark.properties
@@ -128,6 +128,7 @@ REFRESH_IMAGE = images/refresh.png
 CLOSE_WHITE_X_IMAGE = images/close_white.png
 CLOSE_DARK_X_IMAGE = images/close_dark.png
 PALETTE_24x24_IMAGE = images/palette_24x24.png
+COLOR_ICON = images/colors.png
 DEFAULT_AVATAR_16x16_IMAGE = images/default_avatar_16x16.png
 DEFAULT_AVATAR_32x32_IMAGE = images/default_avatar_32x32.png
 DEFAULT_AVATAR_64x64_IMAGE = images/default_avatar_64x64.png
