--- a/src/java/org/jivesoftware/resource/default.properties
+++ b/src/java/org/jivesoftware/resource/default.properties
@@ -161,3 +161,6 @@ History.foreground = 64,64,64,255
 SparkTabbedPane.startColor = 236,236,236,255
 SparkTabbedPane.endColor = 236,236,236,255
 SparkTabbedPane.borderColor = 192,192,192,255
+Chat.activeTabColor = 0,0,0,255
+Chat.inactiveTabColor = 247,247,247,255
+Chat.unreadMessageColor = 255,0,0,255
