adding the old LookAndFeel to the selectable LaF's source is: de.javasoft.plaf.synthetica.SyntheticaBlueMoonLookAndFeel if anyone wants it as default
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@12209 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/java/org/jivesoftware/resource/default.properties
+++ b/src/java/org/jivesoftware/resource/default.properties
@@ -118,6 +118,7 @@ LOOK_AND_FEEL_DISABLED =
 CHANGE_COLORS_DISABLED = 
 # Changes the Default Look&Feel, if empty it will load the SystemSkin
 # Default Spark skin is SubstanceBusinessBlueSteelLookAndFeel
+# old skin is de.javasoft.plaf.synthetica.SyntheticaBlueMoonLookAndFeel
 DEFAULT_LOOK_AND_FEEL = org.jvnet.substance.skin.SubstanceBusinessBlueSteelLookAndFeel
 
 # Below are Single Color Elements
