--- a/src/plugins/apple/src/plugin.xml
+++ b/src/plugins/apple/src/plugin.xml
@@ -1,12 +1,12 @@
 <!-- Define your plugins -->
 <plugin>
-    <name>Apple Notification Plugin</name>
-    <version>1.0</version>
-    <author>Andrew Wright</author>
+    <name>Mac OSX 10.6 Plugin</name>
+    <version>2.0 - OSX10.6.7</version>
+    <author>Wolf Posdorfer</author>
     <homePage>http://www.jivesoftware.com</homePage>
-    <email>andrew@jivesoftware.com</email>
-    <description>Gives Spark mac notification capabilities and other enhancements.</description>
+    <email>9posdorf@informatik.uni-hamburg.de</email>
+    <description>Adds MacOSX features to Spark</description>
     <class>com.jivesoftware.spark.plugin.apple.ApplePlugin</class>
-    <minSparkVersion>2.0.0.1</minSparkVersion>
+    <minSparkVersion>2.6.0</minSparkVersion>
 </plugin>
 
