Fixed GrowlPlugin for OSX10.6
!!!! No more support for Apple.Java.1.5 !!!!

git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@12230 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/plugins/apple/src/plugin.xml
+++ b/src/plugins/apple/src/plugin.xml
@@ -1,7 +1,7 @@
 <!-- Define your plugins -->
 <plugin>
     <name>Mac OSX 10.6 Plugin</name>
-    <version>2.0 - OSX10.6.7</version>
+    <version>2.0</version>
     <author>Wolf Posdorfer</author>
     <homePage>http://www.jivesoftware.com</homePage>
     <email>9posdorf@informatik.uni-hamburg.de</email>
