--- a/src/java/org/jivesoftware/resource/spark.properties
+++ b/src/java/org/jivesoftware/resource/spark.properties
@@ -232,6 +232,9 @@ STAR_RED_IMAGE = images/star_red.png
 STAR_GREY_IMAGE = images/star_grey.png
 STAR_YELLOW_IMAGE = images/star_yellow.png
 STAR_GREEN_IMAGE = images/star_green.png
+STAR_OWNER = images/star_owner.png
+STAR_ADMIN = images/star_admin.png
+STAR_MODERATOR = images/star_moderator.png
 LEFT_ARROW_IMAGE = images/arrow_left_green.png
 RIGHT_ARROW_IMAGE = images/arrow_right_green.png
 BACKGROUND_IMAGE = images/background.png
