Spark privacy plugin. now you are able to manager your privacylists and activate them via status selection
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@12249 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/java/org/jivesoftware/resource/spark.properties
+++ b/src/java/org/jivesoftware/resource/spark.properties
@@ -14,6 +14,23 @@ LOGIN_DIALOG_WORKSPACE = &Workgroup:
 LOGIN_DIALOG_LOGIN_TITLE = Spark
 LOGIN_DIALOG_AUTHENTICATING = Authenticating...
 
+
+# PrivacyPlugin
+PRIVACY_QUERY_DENY = images/privacy_query_deny.png
+PRIVACY_QUERY_ALLOW = images/privacy_query_allow.png
+PRIVACY_POUT_DENY = images/privacy_presence_out_deny.png
+PRIVACY_POUT_ALLOW = images/privacy_presence_out_allow.png
+PRIVACY_PIN_DENY = images/privacy_presence_in_deny.png
+PRIVACY_PIN_ALLOW = images/privacy_presence_in_allow.png
+PRIVACY_MSG_DENY = images/privacy_message_deny.png
+PRIVACY_MSG_ALLOW = images/privacy_message_allow.png
+CLIPBOARD = images/clipboard.png
+PRIVACY_ICON = images/privacy_icon.png
+PRIVACY_ICON_SMALL = images/privacy_icon_small.png
+PRIVACY_LIGHTNING = images/privacy_lightning.png
+PRIVACY_CHECK = images/privacy_check.png
+
+
 #MainWindow
 MAIN_IMAGE = images/spark-16x16.png
 TRAY_IMAGE = images/spark-16x16.png
