SPARK-1285 Server Messages display rework
if you like the "old ways" go to default.properties and put
BROADCAST_IN_CHATWINDOW = true


git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@12255 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/java/org/jivesoftware/resource/default.properties
+++ b/src/java/org/jivesoftware/resource/default.properties
@@ -106,10 +106,14 @@ DEINSTALL_PLUGINS_DISABLED =
 #########     Color + LookandFeel     ###########
 #################################################
 
-
+# by Default Server-Broadcast get their own JFrame containing the Message
+# also HTML tags like <b> <i> <u> can be used
+# if you want server broadcasts handled like every other message including transcripts
+# set this to true
+BROADCAST_IN_CHATWINDOW = false
 # Disable Look&Feel change || "true" = disabled ,  anything else = enabled
 # By Default the user can Change his Look&Feel in the Preferences Menu, 
-#if you dont want this then set it to true
+# if you dont want this then set it to true
 # Preferences -> Appearence -> Customization Tab
 LOOK_AND_FEEL_DISABLED = 
 # Disable if you dont want Users to be able to Change the Textcolors in the Preference Menu
