--- a/src/java/org/jivesoftware/resource/spark.properties
+++ b/src/java/org/jivesoftware/resource/spark.properties
@@ -158,6 +158,7 @@ SERVER_UNAVAILABLE = Can't connect to server: invalid name or server not reachab
 UNRECOVERABLE_ERROR = Invalid username or password.
 
 #Chat Window Images
+ALERT = images/alert.png
 
 
 
