first step on ChatWindow-Toolbar
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@12276 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/java/org/jivesoftware/resource/spark.properties
+++ b/src/java/org/jivesoftware/resource/spark.properties
@@ -329,6 +329,8 @@ DIVIDER_IMAGE = images/divider.png
 LIGHTING_BOLT_IMAGE = images/lightning16.png
 HEADSET_IMAGE = images/headset.png
 BUZZ_IMAGE = images/bell.png
+SETTINGS_IMAGE_16x16 = images/settings16x16.png
+SETTINGS_IMAGE_24x24 = images/settings24x24.png
 
 #Phone
 DIAL_PHONE_IMAGE_24x24 = images/phone_call.png
