SPARK-1296 removed menuBar in ChatContainer. the "alwaysOnTopOption" is now on the right panel between transcript panel and input panel
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@12279 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/java/org/jivesoftware/resource/spark.properties
+++ b/src/java/org/jivesoftware/resource/spark.properties
@@ -31,6 +31,7 @@ PRIVACY_LIGHTNING = images/privacy_lightning.png
 PRIVACY_CHECK = images/privacy_check.png
 
 
+
 #MainWindow
 MAIN_IMAGE = images/spark-16x16.png
 TRAY_IMAGE = images/spark-16x16.png
@@ -159,7 +160,8 @@ UNRECOVERABLE_ERROR = Invalid username or password.
 
 #Chat Window Images
 ALERT = images/alert.png
-
+FRAME_ALWAYS_ON_TOP_ACTIVE = images/window_to_front_active.png
+FRAME_ALWAYS_ON_TOP_DEACTIVE = images/window_to_front_deactive.png
 
 
 #Chat window text
