--- a/src/java/org/jivesoftware/resource/default.properties
+++ b/src/java/org/jivesoftware/resource/default.properties
@@ -121,9 +121,9 @@ LOOK_AND_FEEL_DISABLED =
 # Preferences -> Appearence -> ColorTab 
 CHANGE_COLORS_DISABLED = 
 # Changes the Default Look&Feel, if empty it will load the SystemSkin
-# Default Spark skin is SubstanceBusinessBlueSteelLookAndFeel
-# old skin is de.javasoft.plaf.synthetica.SyntheticaBlueMoonLookAndFeel
-DEFAULT_LOOK_AND_FEEL = org.jvnet.substance.skin.SubstanceBusinessBlueSteelLookAndFeel
+# Default Spark skin is com.jtattoo.plaf.luna.LunaLookAndFeel
+# other nice skin is org.jvnet.substance.skin.SubstanceBusinessBlueSteelLookAndFeel
+DEFAULT_LOOK_AND_FEEL = com.jtattoo.plaf.luna.LunaLookAndFeel
 
 # Below are Single Color Elements
 # They are Stored as Redvalue,Greenvalue,Bluevalue,Alphavalue
