--- a/src/java/org/jivesoftware/resource/default.properties
+++ b/src/java/org/jivesoftware/resource/default.properties
@@ -124,6 +124,8 @@ CHANGE_COLORS_DISABLED =
 # Default Spark skin is com.jtattoo.plaf.luna.LunaLookAndFeel
 # other nice skin is org.jvnet.substance.skin.SubstanceBusinessBlueSteelLookAndFeel
 DEFAULT_LOOK_AND_FEEL = com.jtattoo.plaf.luna.LunaLookAndFeel
+# in JTatto Menubars can have Texts, default is empty
+MENUBAR_TEXT = 
 
 # Below are Single Color Elements
 # They are Stored as Redvalue,Greenvalue,Bluevalue,Alphavalue
