SPARK-1103 - option to register with room SPARK-1306 - fixed rendering issue with the "X"-button
reworked user.kicked and user.banned listener

changed locale string:
message.user.kicked.from.room = {0} has been kicked out of the room by {1}. Reason: {2}
-> {0}=username,{1}=adminname,{2}=reason

message.user.banned = {0} has been banned from this room. Reason: {1}
-> {0}=username,{1}=reason

new locale:
message.groupchat.registered.member = Successfully registered with {0}
->{0}=roomname

git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@12324 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/java/org/jivesoftware/resource/spark.properties
+++ b/src/java/org/jivesoftware/resource/spark.properties
@@ -229,6 +229,7 @@ PROFILE_ICON = images/profile.png
 SEND_FILE_ICON = images/document_into.png
 ADD_CONTACT_IMAGE = images/add_contact.png
 JOIN_GROUPCHAT_IMAGE = images/join_groupchat.png
+PEOPLE_IMAGE = images/people-icon.png
 DOWN_ARROW_IMAGE = images/down_arrow.gif
 PRINTER_IMAGE_16x16 = images/printer.png
 SEND_MAIL_IMAGE_16x16 = images/sendmail.png
