--- a/src/java/org/jivesoftware/resource/spark.properties
+++ b/src/java/org/jivesoftware/resource/spark.properties
@@ -346,3 +346,5 @@ ACCEPT_INVITE_IMAGE = images/accept.png
 REJECT_INVITE_IMAGE = images/reject.png
 INVITE_MORE_IMAGE = images/invitemore.png
 
+# Lanuage
+LANGUAGE_ICON = images/language_plugin.png
