--- a/src/java/org/jivesoftware/resource/default.properties
+++ b/src/java/org/jivesoftware/resource/default.properties
@@ -124,6 +124,7 @@ CHANGE_COLORS_DISABLED =
 # Default Spark skin is com.jtattoo.plaf.luna.LunaLookAndFeel
 # other nice skin is org.jvnet.substance.skin.SubstanceBusinessBlueSteelLookAndFeel
 DEFAULT_LOOK_AND_FEEL = com.jtattoo.plaf.luna.LunaLookAndFeel
+DEFAULT_LOOK_AND_FEEL_MAC = 
 # in JTatto Menubars can have Texts, default is empty
 MENUBAR_TEXT = 
 
