SPARK-1316 refractory privacyplugin. added privacyplugin showing ghost icon next to contact that is currently affected by active list. added ability do disable default and active list
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@12396 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/java/org/jivesoftware/resource/spark.properties
+++ b/src/java/org/jivesoftware/resource/spark.properties
@@ -29,6 +29,7 @@ PRIVACY_ICON = images/privacy_icon.png
 PRIVACY_ICON_SMALL = images/privacy_icon_small.png
 PRIVACY_LIGHTNING = images/privacy_lightning.png
 PRIVACY_CHECK = images/privacy_check.png
+PRIVACY_DEACTIVATE_LIST = images/privacy_list_deactivate.png
 
 
 
