SPARK-1346, Plugin loader now has <java>1.6.0_xx</java> capability
roar added to binaries, its disabled by default 
and requires java 1.6.0_17 or it wont load

git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@12398 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/plugins/roar/plugin.xml
+++ b/src/plugins/roar/plugin.xml
@@ -2,9 +2,11 @@
     <name>Roar!!!</name>
     <class>org.jivesoftware.spark.roar.Roar</class>
     <author>Wolf Posdorfer</author>
-    <version>0.1</version>
+    <version>0.2</version>
     <homePage>http://www.jivesoftware.com</homePage>
     <description>Shows awesome Popups</description>
     <email>9posdorf@informatik.uni-hamburg.de</email>
     <minSparkVersion>2.6.0</minSparkVersion>
+    <os>Windows,Linux</os>
+    <java>1.6.0_17</java>
 </plugin>
