SPARK-1347, apple plugin gets preference entry for configuration - enable/disable dock badges - enable/disable dock bouncing - enable/disable repeated bouncing
updated growl plugin.xml

git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@12400 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/plugins/growl/src/plugin.xml
+++ b/src/plugins/growl/src/plugin.xml
@@ -7,4 +7,5 @@
     <description>Provides Growl notifications on Mac OS X.(http://growl.info)</description>
     <class>com.jivesoftware.spark.plugin.growl.GrowlPlugin</class>
     <minSparkVersion>2.0.0.1</minSparkVersion>
+    <java>1.6.0_00</java>
 </plugin>
