--- a/src/plugins/apple/src/plugin.xml
+++ b/src/plugins/apple/src/plugin.xml
@@ -1,12 +1,14 @@
 <!-- Define your plugins -->
 <plugin>
-    <name>Mac OSX 10.6 Plugin</name>
-    <version>2.0</version>
+    <name>Mac OSX Plugin</name>
+    <version>2.1</version>
     <author>Wolf Posdorfer</author>
     <homePage>http://www.jivesoftware.com</homePage>
     <email>9posdorf@informatik.uni-hamburg.de</email>
     <description>Adds MacOSX features to Spark</description>
     <class>com.jivesoftware.spark.plugin.apple.ApplePlugin</class>
     <minSparkVersion>2.6.0</minSparkVersion>
+	<os>Mac</os>
+	<java>1.6.0_00</java>
 </plugin>
 
