updating plugins to match new specification
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@12401 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/plugins/google/plugin.xml
+++ b/src/plugins/google/plugin.xml
@@ -7,5 +7,6 @@
     <email>derek@jivesoftware.com</email>
     <description>Adds Google Desktop Search   to Spark.</description>
     <class>org.jivesoftware.spark.plugin.GooglePlugin</class>
-    <minSparkVersion>2.0.2</minSparkVersion>
+    <minSparkVersion>2.6.0</minSparkVersion>
+    <java>1.6.0_00</java>
 </plugin>
