--- a/src/plugins/flashing/plugin.xml
+++ b/src/plugins/flashing/plugin.xml
@@ -7,6 +7,7 @@
     <email>michael-will@gmx.net</email>
     <description>Flash window on new messages.</description>
     <class>org.jivesoftware.spark.plugin.flashing.FlashingPlugin</class>
-    <minSparkVersion>2.5.0</minSparkVersion>
+    <minSparkVersion>2.6.0</minSparkVersion>
     <os>Windows</os>
+    <java>1.6.0_00</java>
 </plugin>
