--- a/src/plugins/translator/plugin.xml
+++ b/src/plugins/translator/plugin.xml
@@ -3,9 +3,10 @@
     <name>Translator Plugin</name>
     <class>org.jivesoftware.spark.translator.TranslatorPlugin</class>
     <author>Jive Software</author>
-    <version>1.4</version>
+    <version>1.5</version>
     <homePage>http://www.jivesoftware.com</homePage>
     <description>Translates instant messages between users using Google Translation Service.</description>
     <email>spark@jivesoftware.com</email>
-    <minSparkVersion>2.0.2</minSparkVersion>
+    <minSparkVersion>2.6.0</minSparkVersion>
+    <java>1.6.0_00</java>
 </plugin>
