--- a/src/java/org/jivesoftware/resource/spark.properties
+++ b/src/java/org/jivesoftware/resource/spark.properties
@@ -201,6 +201,7 @@ CO_BROWSER_TAB_TITLE = Co-Browser
 FORUM_TAB_TITLE = Forums
 
 #Images
+CANCEL_IMAGE = images/cancel.gif
 CONFERENCE_IMAGE_24x24 = images/conference_24x24.png
 CONFERENCE_IMAGE_16x16 = images/conference_16x16.png
 PROFILE_IMAGE_24x24 = images/profile_24x24.png
