SPARK-1358 new in default.properties: FILE_TRANSFER_WARNING_SIZE = -1 FILE_TRANSFER_MAXIMUM_SIZE = -1
new locales:
message.file.transfer.file.too.big.error = The selected file is too big.\nThe maximum filezise is {0} the selected file has {1}

{0} = Maximum Size
{1] = Size of selected File

message.file.transfer.file.too.big.warning = The selected file is too big.\nProceed anyway?


git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@12449 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/java/org/jivesoftware/resource/default.properties
+++ b/src/java/org/jivesoftware/resource/default.properties
@@ -43,6 +43,27 @@ DISABLE_UPDATES =
 # users wont be able to shut down Spark
 DISABLE_EXIT = 
 
+#################################################
+################## File Transfer ################
+#################################################
+
+# Specify a size on which Users will get a 
+# warning of a possibly too big file
+# 10MB  = 10485760
+# 100MB = 104857600
+# 1GB   = 1073741824
+# default = -1 (infinity)
+# maximum is 9223372036854775806 byte = 8388608TB
+FILE_TRANSFER_WARNING_SIZE = -1
+
+# Specify the Maximum file size to be permitted to send
+# 10MB  = 10485760
+# 100MB = 104857600
+# 1GB   = 1073741824
+# default = -1 (infinity)
+# maximum is 9223372036854775806 byte = 8.388.608 TB
+FILE_TRANSFER_MAXIMUM_SIZE = -1
+
 
 #################################################
 ################## Main Window ##################
