--- a/src/plugins/otr/plugin.xml
+++ b/src/plugins/otr/plugin.xml
@@ -7,6 +7,7 @@
     <email>holger@bergunde.de</email>
     <description>Adds OTR support to Spark</description>
     <minSparkVersion>2.6.0</minSparkVersion>
+    <java>1.6.0_1</java>
     <class>org.jivesoftware.spark.otrplug.OTRPlugin</class>
     <os>Windows,Linux,Mac</os>
 </plugin>
