SPARK-1359 created Plugin-Blacklist in Default.properties example: PLUGIN_BLACKLIST = Fastpath, Jingle Client will disable all plugins called "Fastpath" and "Jingle Client"
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@12454 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/java/org/jivesoftware/resource/default.properties
+++ b/src/java/org/jivesoftware/resource/default.properties
@@ -121,6 +121,16 @@ INSTALL_PLUGINS_DISABLED =
 # Disable deleting of Plugins
 # set true if you want to disable deinstalling of Plugins
 DEINSTALL_PLUGINS_DISABLED = 
+# Put plugins here that you dont want enabled
+# comma separated
+# names of plugins can be found in the plugin.xml
+# example: Fastpath,Jingle Client,Phone Client,Window Flashing Plugin
+# default is empty
+PLUGIN_BLACKLIST =
+# Disable Plugins by entrypoint Class 
+# Comma seperated
+# example org.jivesoftware.fastpath.FastpathPlugin
+PLUGIN_BLACKLIST_CLASS =
 
 
 #################################################
