SPARK-1361 reduced last shown History to 5000Messages to reduce loading time and ram-usage
if you want to increase or decrease set "maximumHistory=xxx" (where xxx is any value) in APPDATA/Spark/spark.properties

no Settings Panel for now

------
fixed little roar bug in TopRight-Mode

git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@12457 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/java/org/jivesoftware/resource/default.properties
+++ b/src/java/org/jivesoftware/resource/default.properties
@@ -122,14 +122,15 @@ INSTALL_PLUGINS_DISABLED =
 # set true if you want to disable deinstalling of Plugins
 DEINSTALL_PLUGINS_DISABLED = 
 # Put plugins here that you dont want enabled
-# comma separated
+# comma separated, case insensitive
 # names of plugins can be found in the plugin.xml
 # example: Fastpath,Jingle Client,Phone Client,Window Flashing Plugin
 # default is empty
 PLUGIN_BLACKLIST =
 # Disable Plugins by entrypoint Class 
-# Comma seperated
+# Comma seperated, case sensitive
 # example org.jivesoftware.fastpath.FastpathPlugin
+# default is empty
 PLUGIN_BLACKLIST_CLASS =
 
 
