the plugin repository can now be configure in default.properties for a sample structure of how the plugin-repository must look like see documentation/sample_plugin_repository.xml
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@12484 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/java/org/jivesoftware/resource/default.properties
+++ b/src/java/org/jivesoftware/resource/default.properties
@@ -114,7 +114,15 @@ HELP_FORUM_TEXT =
 ################     Plugins     ################
 #################################################
 
-
+# This is the default location where Plugins can be downloaded from
+# for a sample structure see trunk/documentation/sample_plugin_repository.xml
+# default: http://www.igniterealtime.org/updater/plugins.jsp
+PLUGIN_REPOSITORY = http://www.igniterealtime.org/updater/plugins.jsp
+# Use Sparks global Proxy to connect to the repository?
+# if your repository lies within your network, this probably needs to be disabled
+# default: true
+PLUGIN_REPOSITORY_USE_PROXY = true
+#http://www.igniterealtime.org/updater/plugins.jsp
 # Disable Installing of Plugins
 # set true if you want to disable installing of Plugins
 INSTALL_PLUGINS_DISABLED = 
