SPARK-1373 REVERSI IS BACK! (have to build it on your own, not automatically build within installer)
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@12485 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/plugins/reversi/plugin.xml
+++ b/src/plugins/reversi/plugin.xml
@@ -1,12 +1,13 @@
 <!-- Define your plugins -->
 <plugin>
     <name>Reversi</name>
-    <version>1.0</version>
-    <author>Matt Tucker, Bill Lynch</author>
+    <version>1.3</version>
+    <author>Matt Tucker, Bill Lynch, Holger Bergunde</author>
     <homePage>http://www.jivesoftware.org</homePage>
     <email>plugins@jivesoftware.org</email>
     <description>Multiplayer game of Reversi</description>
     <class>org.jivesoftware.game.reversi.ReversiPlugin</class>
-    <minSparkVersion>2.0.2</minSparkVersion>
+    <minSparkVersion>2.6.0</minSparkVersion>
+    <java>1.6.0_01</java>
 </plugin>
 
