--- a/src/plugins/reversi/src/resources/reversi.properties
+++ b/src/plugins/reversi/src/resources/reversi.properties
@@ -1,1 +1,9 @@
 REVERSI_ICON=images/reversi-icon.png
+REVERSI_BOARD=images/reversi-board.png
+REVERSI_SCORE_WHITE=images/score-button-white.png
+REVERSI_SCORE_BLACK=images/score-button-black.png
+REVERSI_LABEL_BLACK=images/turn-label-black.png
+REVERSI_LABEL_WHITE=images/turn-label-white.png
+REVERSI_RESIGN=images/button-resign.png
+REVERSI_YOU=images/you.png
+REVERSI_THEM=images/them.png
