SPARK-1380 changed spark splash screen
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@12508 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/java/org/jivesoftware/resource/default.properties
+++ b/src/java/org/jivesoftware/resource/default.properties
@@ -3,7 +3,7 @@
 #################################################
 # The Login image
 # suggested image dimensions 244 x 188 pixels
-MAIN_IMAGE = images/spark.png
+MAIN_IMAGE = images/spark.gif
 APPLICATION_NAME = Spark
 SHORT_NAME = Spark
 LOGIN_DIALOG_BACKGROUND_IMAGE =  images/login_dialog_background.png
