expand ability to customize spark if you want to build your own branded version
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@12543 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/java/org/jivesoftware/resource/default.properties
+++ b/src/java/org/jivesoftware/resource/default.properties
@@ -13,6 +13,8 @@ SECONDARY_BACKGROUND_IMAGE = images/steel.png
 # Specify a fixed Hostname
 # Changing the Hostname will also be prohibited if set
 HOST_NAME = 
+# Set true if you dont want user to change the server
+HOST_NAME_CHANGE_DISABLED = false
 # Proxy Settings
 # Protocols are HTTP or SOCKS , case sensitive!!!
 PROXY_PROTOCOL = 
@@ -26,6 +28,20 @@ ACCOUNT_DISABLED =
 # Users wont be able to access the advanced configuration 
 ADVANCED_DISABLED = 
 
+#If Advanded preferences is enabled you are able to remove tabs, except the "General" tab
+#Removes SSO Tab 
+SSO_DISABLED = false
+#Removes PKI Tab
+PKI_DISABLED = false
+#Removes Proxy Tab
+PROXY_DISABLED = false
+
+
+# Show Password Reset Button on LoginDialog. 
+# !!!! This will repleace the "register new user" button, please set ACCOUNT_DISABLED = true !!!!
+PASSWORD_RESET_ENABLED = false
+# URL to your password reset html 
+PASSWORD_RESET_URL = 
 
 # Branding only
 # Branded images appear in the Top-Right corner, and must be included in the classpath
