--- a/src/java/org/jivesoftware/resource/default.properties
+++ b/src/java/org/jivesoftware/resource/default.properties
@@ -6,6 +6,7 @@
 MAIN_IMAGE = images/spark.gif
 APPLICATION_NAME = Spark
 SHORT_NAME = Spark
+APPLICATION_VERSION = 2.6.3
 LOGIN_DIALOG_BACKGROUND_IMAGE =  images/login_dialog_background.png
 TOP_BOTTOM_BACKGROUND_IMAGE = images/top_bottom_background_image.png
 SECONDARY_BACKGROUND_IMAGE = images/steel.png
