SPARK-1326: Make tabs position optional: TOP or BOTTOM; make search input appearance optional
-add two new properties in default.properties:

   1. tabs are placed on bottom by default. if set to true will be placed on top
      TABS_PLACEMENT_TOP = true

   1. the person search field is displayed by default. if set to true the search field will
   2. not be displayed
      HIDE_PERSON_SEARCH_FIELD = true

With SPARK-1313 these values can be easily customized from plugin

git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@12574 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/java/org/jivesoftware/resource/default.properties
+++ b/src/java/org/jivesoftware/resource/default.properties
@@ -185,6 +185,13 @@ DEFAULT_LOOK_AND_FEEL_MAC =
 # in JTatto Menubars can have Texts, default is empty
 MENUBAR_TEXT = 
 
+# tabs are placed on bottom by default. if set to true will be placed on top
+TABS_PLACEMENT_TOP =
+
+# the person search field is displayed by default. if set to true the search field will
+# not be displayed
+HIDE_PERSON_SEARCH_FIELD =
+
 # Below are Single Color Elements
 # They are Stored as Redvalue,Greenvalue,Bluevalue,Alphavalue
 # Ranging from 0 - 255
