SPARK-1313: Enhance ability to overwrite spark properties values through plugin
-make Spark user personal directory configurable through plugin (create dedicated properties key/value pairs in default.properties)

git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@12593 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/java/org/jivesoftware/resource/default.properties
+++ b/src/java/org/jivesoftware/resource/default.properties
@@ -7,6 +7,10 @@ MAIN_IMAGE = images/spark.gif
 APPLICATION_NAME = Spark
 SHORT_NAME = Spark
 APPLICATION_VERSION = 2.6.3
+USER_DIRECTORY_WINDOWS = Spark
+USER_DIRECTORY_LINUX = .Spark
+USER_DIRECTORY_MAC = Library/Application Support/Spark
+
 LOGIN_DIALOG_BACKGROUND_IMAGE =  images/login_dialog_background.png
 TOP_BOTTOM_BACKGROUND_IMAGE = images/top_bottom_background_image.png
 SECONDARY_BACKGROUND_IMAGE = images/steel.png
