SPARK-1521: Add invisible presence state
Patch from Slava Durin - Thanks Slava!
-new checkbox on Login Dialog that offers the option to login as invisible
-new presence (invisible) added on the dropdown menu in the Status bar. The user can anytime go invisible

git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@13597 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/java/org/jivesoftware/resource/spark.properties
+++ b/src/java/org/jivesoftware/resource/spark.properties
@@ -211,6 +211,7 @@ ADD_IMAGE_24x24 = images/add_24x24.png
 TELEPHONE_24x24 = images/telephone_24x24.png
 IM_DND = images/im_dnd.png
 IM_AWAY = images/im_away.png
+INVISIBLE = images/im_invisible.png
 MESSAGE_AWAY = images/Away.png
 MESSAGE_DND = images/DoNotDisturb.png
 MESSAGE_NEW_TRAY = images/spark_tray_message-16x16.png
