SPARK-1545 Updated plugins to use java 7, forbid old versions
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@13933 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/plugins/battleships/plugin.xml
+++ b/src/plugins/battleships/plugin.xml
@@ -6,7 +6,7 @@
     <homePage>http://www.jivesoftware.com</homePage>
     <description>Battleship plugin for Spark</description>
     <email>9posdorf@informatik.uni-hamburg.de</email>
-    <minSparkVersion>2.6.1</minSparkVersion>
+    <minSparkVersion>2.7.0</minSparkVersion>
     <os>Windows,Linux,Mac</os>
-    <java>1.6.0_00</java>
+    <java>1.7.0</java>
 </plugin>
