--- a/src/plugins/google/plugin.xml
+++ b/src/plugins/google/plugin.xml
@@ -7,6 +7,6 @@
     <email>derek@jivesoftware.com</email>
     <description>Adds Google Desktop Search   to Spark.</description>
     <class>org.jivesoftware.spark.plugin.GooglePlugin</class>
-    <minSparkVersion>2.6.0</minSparkVersion>
-    <java>1.6.0_00</java>
+    <minSparkVersion>2.7.0</minSparkVersion>
+    <java>1.7.0</java>
 </plugin>
