--- a/src/plugins/linux/plugin.xml
+++ b/src/plugins/linux/plugin.xml
@@ -7,7 +7,7 @@
     <email>derek@jivesoftware.com</email>
     <description>Adds System Tray functionality.</description>
     <class>org.jivesoftware.spark.plugins.SystemTrayPlugin</class>
-    <minSparkVersion>2.5.0</minSparkVersion>
-    <java>1.6.0_00</java>
+    <minSparkVersion>2.7.0</minSparkVersion>
+    <java>1.7.0</java>
 </plugin>
 
