--- a/src/plugins/sip/plugin.xml
+++ b/src/plugins/sip/plugin.xml
@@ -7,8 +7,8 @@
     <email>thiago@jivesoftware.com</email>
     <description>SIP Softphone Plugin</description>
     <class>org.jivesoftware.sparkplugin.SoftPhonePlugin</class>
-    <minSparkVersion>2.6.0</minSparkVersion>
+    <minSparkVersion>2.7.0</minSparkVersion>
     <os>Windows,Mac,Linux</os>
-    <java>1.6.0_00</java>
+    <java>1.7.0</java>
 </plugin>
 
