--- a/src/plugins/apple/src/plugin.xml
+++ b/src/plugins/apple/src/plugin.xml
@@ -7,8 +7,8 @@
     <email>9posdorf@informatik.uni-hamburg.de</email>
     <description>Adds MacOSX features to Spark</description>
     <class>com.jivesoftware.spark.plugin.apple.ApplePlugin</class>
-    <minSparkVersion>2.6.0</minSparkVersion>
+    <minSparkVersion>2.7.0</minSparkVersion>
 	<os>Mac</os>
-	<java>1.6.0_00</java>
+	<java>1.7.0</java>
 </plugin>
 
