--- a/src/plugins/fastpath/plugin.xml
+++ b/src/plugins/fastpath/plugin.xml
@@ -6,6 +6,6 @@
     <homePage>http://www.jivesoftware.com</homePage>
     <description>Adds Fastpath functionality to Spark</description>
     <class>org.jivesoftware.fastpath.FastpathPlugin</class>
-    <minSparkVersion>2.6.0</minSparkVersion>
-    <java>1.6.0_00</java>
+    <minSparkVersion>2.7.0</minSparkVersion>
+    <java>1.7.0</java>
 </plugin>
