--- a/src/plugins/growl/src/plugin.xml
+++ b/src/plugins/growl/src/plugin.xml
@@ -6,7 +6,7 @@
     <email>andrew@jivesoftware.com</email>
     <description>Provides Growl notifications on Mac OS X.(http://growl.info)</description>
     <class>com.jivesoftware.spark.plugin.growl.GrowlPlugin</class>
-    <minSparkVersion>2.6.0</minSparkVersion>
+    <minSparkVersion>2.7.0</minSparkVersion>
     <os>Mac</os>
-    <java>1.6.0_00</java>
+    <java>1.7.0</java>
 </plugin>
