--- a/src/plugins/roar/plugin.xml
+++ b/src/plugins/roar/plugin.xml
@@ -6,7 +6,7 @@
     <homePage>http://www.jivesoftware.com</homePage>
     <description>Shows awesome Popups</description>
     <email>9posdorf@informatik.uni-hamburg.de</email>
-    <minSparkVersion>2.6.0</minSparkVersion>
+    <minSparkVersion>2.7.0</minSparkVersion>
     <os>Windows,Linux</os>
-    <java>1.6.0_17</java>
+    <java>1.7.0</java>
 </plugin>
