SPARK-33, and bumped spark version info to 2.7.0

--- a/src/java/org/jivesoftware/resource/default.properties
+++ b/src/java/org/jivesoftware/resource/default.properties
@@ -6,7 +6,7 @@
 MAIN_IMAGE = images/spark.gif
 APPLICATION_NAME = Spark
 SHORT_NAME = Spark
-APPLICATION_VERSION = 2.6.3
+APPLICATION_VERSION = 2.7.0
 USER_DIRECTORY_WINDOWS = Spark
 USER_DIRECTORY_LINUX = .Spark
 USER_DIRECTORY_MAC = Library/Application Support/Spark
@@ -130,6 +130,35 @@ HELP_FORUM_DISABLED =
 # leave blank for default
 HELP_FORUM_TEXT = 
 
+#################################################
+############### About Box Window ################
+#################################################
+
+# Version and Developer Info
+# Note: Application name and Version are always displayed
+
+# Display Version and Developer Info
+# 'true' or 'false'
+DISPLAY_DEV_INFO = true
+# Leave blank for auto-detect
+SMACK_VERSION =
+JAVA_VERSION =
+
+# Set additional About Box information
+# About Box dynamically resizes depending on number of lines and length of text
+# Leave blank to omit line and shift lines upwards
+APPLICATION_INFO1 = Ignite Realtime
+APPLICATION_INFO2 =
+APPLICATION_INFO3 =
+# Clickable Link - must be a valid and complete URL
+# Ex: http://www.igniterealtime.org/
+APPLICATION_LICENSE_LINK = http://www.igniterealtime.org/builds/spark/docs/latest/LICENSE.html
+APPLICATION_LICENSE_LINK_TXT = Apache License, Version 2.0
+APPLICATION_INFO4 =
+# Clickable Link - must be a valid and complete URL
+# Ex: http://www.igniterealtime.org/
+APPLICATION_LINK = http://www.igniterealtime.org/
+APPLICATION_LINK_TXT = www.igniterealtime.org
 
 #################################################
 ################     Plugins     ################
