spark version and build num populate default.properties automatically at build

--- a/src/java/org/jivesoftware/resource/default.properties
+++ b/src/java/org/jivesoftware/resource/default.properties
@@ -6,7 +6,15 @@
 MAIN_IMAGE = images/spark.gif
 APPLICATION_NAME = Spark
 SHORT_NAME = Spark
-APPLICATION_VERSION = 2.7.0
+
+############# Auto Set During Build #############
+APPLICATION_VERSION =
+# Passed into ant build tasks using:
+#   -Dbuild.number=<build number>
+# If not passed in, this field is ignored.
+BUILD_NUMBER =
+#################################################
+
 USER_DIRECTORY_WINDOWS = Spark
 USER_DIRECTORY_LINUX = .Spark
 USER_DIRECTORY_MAC = Library/Application Support/Spark
