change language to be more generic

--- a/src/java/org/jivesoftware/resource/default.properties
+++ b/src/java/org/jivesoftware/resource/default.properties
@@ -9,7 +9,7 @@ SHORT_NAME = Spark
 
 ############# Auto Set During Build #############
 APPLICATION_VERSION =
-# Passed into ant build tasks using:
+# Passed into ant via cmd line argument:
 #   -Dbuild.number=<build number>
 # If not passed in, this field is ignored.
 BUILD_NUMBER =
