Add options to default.properties to use hostname or version as resource https://igniterealtime.org/issues/browse/SPARK-1622

--- a/src/java/org/jivesoftware/resource/default.properties
+++ b/src/java/org/jivesoftware/resource/default.properties
@@ -8,7 +8,7 @@ APPLICATION_NAME = Spark
 SHORT_NAME = Spark
 
 ############# Auto Set During Build #############
-APPLICATION_VERSION = 2.7.0
+APPLICATION_VERSION = 2.7.1
 # Passed into ant via cmd line argument:
 #   -Dbuild.number=<build number>
 # If not passed in, this field is ignored.
@@ -40,6 +40,11 @@ ACCOUNT_DISABLED =
 # Remove Advanced Configuration Button from Loginwindow
 # Users wont be able to access the advanced configuration 
 ADVANCED_DISABLED = 
+
+# Force using hostname or version as a resource (both are "false" by default; only one can be
+# "true" at a time; if both are "true", then hostname will be used as a resource)
+HOSTNAME_AS_RESOURCE = false
+VERSION_AS_RESOURCE = false
 
 #If Advanded preferences is enabled you are able to remove tabs, except the "General" tab
 #Removes SSO Tab 
