Option to force disabling history https://igniterealtime.org/issues/browse/SPARK-1436

--- a/src/java/org/jivesoftware/resource/default.properties
+++ b/src/java/org/jivesoftware/resource/default.properties
@@ -8,7 +8,7 @@ APPLICATION_NAME = Spark
 SHORT_NAME = Spark
 
 ############# Auto Set During Build #############
-APPLICATION_VERSION = 2.7.1
+APPLICATION_VERSION = 2.7.2
 # Passed into ant via cmd line argument:
 #   -Dbuild.number=<build number>
 # If not passed in, this field is ignored.
@@ -45,6 +45,10 @@ ADVANCED_DISABLED =
 # "true" at a time; if both are "true", then hostname will be used as a resource)
 HOSTNAME_AS_RESOURCE = false
 VERSION_AS_RESOURCE = false
+
+# When enabled it removes history from the chat window and doesn't save history into transcript files. Also removes history
+# settings from the preferences, removes history button from the chat window and contact's history context menu.
+HISTORY_DISABLED = false
 
 #If Advanded preferences is enabled you are able to remove tabs, except the "General" tab
 #Removes SSO Tab 
