--- a/src/java/org/jivesoftware/resource/default.properties
+++ b/src/java/org/jivesoftware/resource/default.properties
@@ -46,9 +46,11 @@ ADVANCED_DISABLED =
 HOSTNAME_AS_RESOURCE = false
 VERSION_AS_RESOURCE = false
 
-# When enabled it removes history from the chat window and doesn't save history into transcript files. Also removes history
+# When enabled, it removes history from the chat window and doesn't save history into transcript files. Also removes history
 # settings from the preferences, removes history button from the chat window and contact's history context menu.
 HISTORY_DISABLED = false
+# When enabled, it hides history settings from the preferences and removes Clear button from the context menu in the Chat window
+HIDE_HISTORY_SETTINGS = false
 
 #If Advanded preferences is enabled you are able to remove tabs, except the "General" tab
 #Removes SSO Tab 
