--- a/src/java/org/jivesoftware/resource/default.properties
+++ b/src/java/org/jivesoftware/resource/default.properties
@@ -66,6 +66,8 @@ PROXY_DISABLED = false
 PASSWORD_RESET_ENABLED = false
 # URL to your password reset html 
 PASSWORD_RESET_URL = 
+# Hides Save Password checkbox on the Login screen and in the Preferences
+HIDE_SAVE_PASSWORD = false
 
 # Branding only
 # Branded images appear in the Top-Right corner, and must be included in the classpath
